[package]
name = "lwprintf-rs"
version = "0.2.0"
edition = "2024"
authors = ["chen linfeng <chenlinfeng25@outlook.com>"]
keywords = ["lwprintf", "printf", "no_std", "embedded", "os"]
description = "Rust bindings for the lightweight printf library lwprintf."

[dependencies]


[build-dependencies]
cc = "1.2"
bindgen = "0.72"
