[package]
name = "lwprintf-rs"
version = "0.3.1"
edition = "2024"
authors = ["chen linfeng <chenlinfeng25@outlook.com>"]
keywords = ["lwprintf", "printf", "no_std", "embedded", "os"]
description = "Rust bindings for the lightweight printf library lwprintf."
license = "MIT"
repository = "https://github.com/Godones/lwprintf-rs"
homepage = "https://github.com/Godones/lwprintf-rs"


[build-dependencies]
cc = "1.2.51"
bindgen = "0.72"
